# game-of-life

./: Cargo.toml  README.md  bootstrap.js  index.html
.github/workflows/: rust.yml  webpack.yml
docs/: 0.bootstrap.js  bootstrap.js  index.html
pkg/: game_of_life.d.ts  game_of_life_bg.js  game_of_life_bg.wasm  game_of_life_bg.wasm.d.ts  package.json
src/: lib.rs
tests/: web.rs
www/: index.html  index.js  package-lock.json  package.json  webpack.config.js
