[package]
name = "game-of-life"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
fixedbitset = "0.4.2"
js-sys = "0.3.61"
rand = "0.8.5"
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen = "0.2.84"
wasm-bindgen-test = "0.3.34"
[dependencies.web-sys]
version = "0.3"
features = [
  "console",
]
